# code-space

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  main.cpp
cmake/: FindIrrlicht.cmake
src/: ICamera.h  IRenderable.h  IRenderer.h  IServiceCoordinator.cpp  IServiceCoordinator.h
src/coordinator/: CServiceCoordinator.cpp  CServiceCoordinator.h
src/render/: CRenderer.cpp  CRenderer.h
